# cFloydWarshallParallel

./: CMakeLists.txt  Makefile  README.md
.github/: labeler.yml
.github/workflows/: c-cpp.yml  cmake.yml  codeql.yml
OpenCLTestProject/: CMakeLists.txt  main.c
buildMakeFile/: wfiOpenCl  wfiSequential
common/: commonFunctions.c  commonFunctions.h
data/: progam.cl  program.cl
oneFileVer/: main.c
test/: CMakeLists.txt  myPlaceholderTest.c  wfiOpenClTest.c  wfiSequentialTest.c
wfiOpenCl/: CMakeLists.txt  main.c  myMatrix.h  wfiOpenCl.c  wfiOpenCl.h  wfiOpencl.c  wfiOpencl.h
wfiOpenClOneFile/: main.c
wfiOpenCldsqdsqs/: wfiOpenCl.c
wfiSequential/: CMakeLists.txt  main.c  wfiSequential.c  wfiSequential.h
